# robot_programming

./: .gitignore  README.md
another_test/: another_test.txt
exercises/rp_01_compilers_and_build_systems/exercise/mini_core/: CMakeLists.txt
exercises/rp_01_compilers_and_build_systems/exercise/mini_core/src/: CMakeLists.txt
exercises/rp_01_compilers_and_build_systems/exercise/mini_core/src/messages/: CMakeLists.txt
exercises/rp_01_compilers_and_build_systems/exercise/mini_core/src/utils/: CMakeLists.txt
exercises/rp_02_cpp_intro/exercise/: CMakeLists.txt
exercises/rp_02_cpp_intro/solution/: CMakeLists.txt
exercises/rp_02b_cpp_inheritance/: README
exercises/rp_02b_cpp_inheritance/exercise/: CMakeLists.txt
exercises/rp_02b_cpp_inheritance/exercise/src/: lidar.cpp  lidar.h  main.cpp  pan_unit.cpp  pan_unit.h  robot.cpp  robot.h  simple_geometry.cpp  simple_geometry.h  world.cpp  world.h
exercises/rp_02b_cpp_inheritance/magic_simulator/src/: geometry_2d.cpp  geometry_2d.h  test_geometry_2d.cpp
exercises/rp_02b_cpp_inheritance/magic_simulator_2/src/: CMakeLists.txt  draw_helpers.cpp  draw_helpers.h  geometry_2d.cpp  geometry_2d.h  grid_map.cpp  grid_map.h  isometry_2.h  test_geometry_2d.cpp  test_grid_map.cpp  test_stuff.cpp  vec_x.h
exercises/rp_02b_cpp_inheritance/magic_simulator_3/: CMakeLists.txt  README
exercises/rp_02b_cpp_inheritance/magic_simulator_3/src/: CMakeLists.txt  draw_helpers.cpp  draw_helpers.h  grid_map.h  isometry_2.h  test_stuff.cpp  world_item.cpp  world_item.h
exercises/rp_02b_cpp_inheritance/magic_simulator_solution_1/: CMakeLists.txt
exercises/rp_02b_cpp_inheritance/magic_simulator_solution_1/src/: CMakeLists.txt  geometry_2d.cpp  test_geometry_2d.cpp
exercises/rp_02b_cpp_inheritance/magic_simulator_solution_2/src/: grid_map.cpp  grid_map.h  test_stuff.cpp  vec_x.cpp
exercises/rp_02b_cpp_inheritance/magic_simulator_solution_3/src/: isometry_2.h  laser_scan.h  laser_scanner.cpp  laser_scanner.h  precision.h  simulator.cpp  test_stuff.cpp  vec_x.h  world_item.cpp  world_item.h
exercises/rp_03_metaprogramming/src/: CMakeLists.txt  grid_map.cpp  isometry_2.cpp  isometry_2.h  laser_scan.cpp  simulator.cpp  test_grid_map.cpp  test_stuff.cpp  vec_x.h  world_item.cpp  world_item.h
git_test/: added_file.txt
source/rp_03_metaprogramming/: CMakeLists.txt  sort_1.cpp  sort_2.cpp  sort_3.cpp
(+13 files in other folders)
