add_library(utils SHARED
    property_eigen.cpp
    blob.cpp
    id_context.cpp
    serializer.cpp
    property.cpp
    property_identifiable.cpp
    deserializer.cpp
    property_container.cpp
    property_container_manager.cpp
    serializable.cpp
    serialization_context.cpp
    id_placeholder.cpp
    identifiable.cpp
    object_data.cpp
)